--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,19 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <conventions.version>1.0.0-SNAPSHOT</conventions.version>
         <codi.version>1.0.5</codi.version>
+        <version.selenium>2.37.1</version.selenium>
+        <version.drone>1.2.3.Final</version.drone>
+        <version.arquillian>1.1.2.Final</version.arquillian>
+        <version.graphene>2.0.1.Final</version.graphene>
+        <arquillian.jbossHome>/home/rmpestano/jboss-eap-6.1</arquillian.jbossHome>
+        <arquillian.browser>firefox</arquillian.browser>
+        <arquillian.debug>false</arquillian.debug>
+        <arquillian.remote>false</arquillian.remote>
+        <arquillian.chromeDriver>c:\chromedriver.exe</arquillian.chromeDriver>
+        <arquillian.localAddress>localhost</arquillian.localAddress>
+        <arquillian.remoteAddress>http://remote-selenium-hub:1035/wd/hub</arquillian.remoteAddress>
+        <build.timestamp>${maven.build.timestamp}</build.timestamp>
+        <maven.build.timestamp.format>dd/MM/yyyy HH:mm</maven.build.timestamp.format>
     </properties>
 
     <dependencies>
@@ -106,6 +119,106 @@
             <version>4.8.2</version>
             <scope>test</scope>
         </dependency>
+        <!-- arquillian -->
+        <dependency>
+            <groupId>org.jboss.arquillian.junit</groupId>
+            <artifactId>arquillian-junit-container</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <!--arquillian persistence(dbunit) -->
+        <dependency>
+            <groupId>org.jboss.arquillian.extension</groupId>
+            <artifactId>arquillian-persistence-api</artifactId>
+            <version>1.0.0.Alpha6</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.arquillian.extension</groupId>
+            <artifactId>arquillian-persistence-impl</artifactId>
+            <version>1.0.0.Alpha6</version>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- shrinkWrap resolvers -->
+        <dependency>
+            <groupId>org.jboss.shrinkwrap.resolver</groupId>
+            <artifactId>shrinkwrap-resolver-depchain</artifactId>
+            <scope>test</scope>
+            <type>pom</type>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jboss.arquillian.graphene</groupId>
+            <artifactId>graphene-webdriver</artifactId>
+            <type>pom</type>
+            <scope>test</scope>
+            <version>${version.graphene}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.jboss.arquillian.extension</groupId>
+                    <artifactId>arquillian-phantom-driver</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
+        <!-- headless browser phantom.js -->
+        <dependency>
+            <groupId>org.jboss.arquillian.extension</groupId>
+            <artifactId>arquillian-phantom-driver</artifactId>
+            <version>1.1.0.Final</version>
+            <scope>test</scope>
+        </dependency>
+        <!-- arquillian jbehave -->
+        <dependency>
+            <groupId>org.jboss.arquillian.jbehave</groupId>
+            <artifactId>arquillian-jbehave-core</artifactId>
+            <version>1.0.2</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.spec.javax.annotation</groupId>
+            <artifactId>jboss-annotations-api_1.1_spec</artifactId>
+            <version>1.0.1.Final</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.spec.javax.ejb</groupId>
+            <artifactId>jboss-ejb-api_3.1_spec</artifactId>
+            <version>1.0.2.Final</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.arquillian.protocol</groupId>
+            <artifactId>arquillian-protocol-servlet</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpcore</artifactId>
+            <version>4.2.5</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>commons-collections</groupId>
+            <artifactId>commons-collections</artifactId>
+            <version>3.2.1</version>
+        </dependency>
+        <dependency>
+            <groupId>xml-apis</groupId>
+            <artifactId>xml-apis</artifactId>
+            <version>1.4.01</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.7.5</version>
+            <scope>test</scope>
+        </dependency>
+        <!-- end test dependencies -->
 
         <dependency>
             <groupId>javax</groupId>
@@ -120,6 +233,27 @@
                 <groupId>org.conventionsframework</groupId>
                 <artifactId>conventions-bom</artifactId>
                 <version>1.0.0-RC1</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.jboss.arquillian</groupId>
+                <artifactId>arquillian-bom</artifactId>
+                <version>${version.arquillian}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.jboss.arquillian.selenium</groupId>
+                <artifactId>selenium-bom</artifactId>
+                <version>${version.selenium}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.jboss.arquillian.extension</groupId>
+                <artifactId>arquillian-drone-bom</artifactId>
+                <version>${version.drone}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -251,7 +385,154 @@
                 <!-- end Logging -->
             </dependencies>
         </profile>
+        <profile>
+            <id>jboss-remote</id>
+            <properties>
+                <arquillian.testContainer>jboss-remote</arquillian.testContainer>
+                <!--referenciado pelo arquillian.launch e usado pel arquillian.xml para escolher qual container o deploy do arquillian sera feito-->
+            </properties>
+            <dependencies>
+                <dependency>
+                    <groupId>org.jboss.as</groupId>
+                    <artifactId>jboss-as-arquillian-container-remote</artifactId>
+                    <scope>test</scope>
+                    <version>7.2.0.Final</version>
+                    <!--deve ser igual a versao do server onde
+                                    os testes irão executar -->
+                </dependency>
+            </dependencies>
+            <build>
 
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>2.16</version>
+                        <configuration>
+                            <skipTests>false</skipTests>
+                            <runOrder>reversealphabetical</runOrder>
+                            <includes>
+                                <include>**/*FunctionalTests.java</include>
+                                <include>**/*IntegrationTests.java</include>
+                                <!--<include>**/*UnitTests.java</include>-->
+                                <include>**/*TurmaIncluirBehave.java</include>
+                            </includes>
+                            <!--<excludes>-->
+                            <!--<exclude>-->
+                            <!--**/*BaseFunctionalTest.java-->
+                            <!--</exclude>-->
+                            <!--</excludes>-->
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>jboss-managed</id>
+            <properties>
+                <!--referenced by arquillian.launch and used in arquillian.xml to choice which container arquillian will use-->
+                <arquillian.testContainer>jboss-managed</arquillian.testContainer>
+            </properties>
+            <dependencies>
+                <dependency>
+                    <groupId>org.jboss.as</groupId>
+                    <artifactId>jboss-as-arquillian-container-managed</artifactId>
+                    <scope>test</scope>
+                    <version>7.2.0.Final</version>
+                </dependency>
+            </dependencies>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>2.16</version>
+                        <configuration>
+                            <skipTests>false</skipTests>
+                            <runOrder>reversealphabetical</runOrder>
+                            <includes>
+                                <include>**/*IT.java</include>
+                            </includes>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <!-- tests coverage-->
+        <profile>
+            <id>jacoco</id>
+            <properties>
+                <jacoco.version>0.6.0.201210061924</jacoco.version>
+            </properties>
+            <dependencies>
+                <dependency>
+                    <groupId>org.jboss.arquillian.extension</groupId>
+                    <artifactId>arquillian-jacoco</artifactId>
+                    <scope>test</scope>
+                    <version>1.0.0.Alpha5</version>
+                </dependency>
+                <dependency>
+                    <groupId>org.jacoco</groupId>
+                    <artifactId>org.jacoco.core</artifactId>
+                    <version>${jacoco.version}</version>
+                </dependency>
+            </dependencies>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.jacoco</groupId>
+                        <artifactId>jacoco-maven-plugin</artifactId>
+                        <version>${jacoco.version}</version>
+                        <executions>
+                            <execution>
+                                <goals>
+                                    <goal>prepare-agent</goal>
+                                </goals>
+                            </execution>
+                            <execution>
+                                <id>report</id>
+                                <phase>prepare-package</phase>
+                                <goals>
+                                    <goal>report</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+        <!-- profiles de navegadores(selenium web drivers) apenas para informar configuração da propriedade arquillian.browser do pom.xml via profile-->
+        <profile>
+            <id>webdriver-firefox</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <properties>
+                <arquillian.browser>firefox</arquillian.browser>
+            </properties>
+        </profile>
+
+        <profile>
+            <id>webdriver-phantomjs</id>
+            <properties>
+                <arquillian.browser>phantomjs</arquillian.browser>
+            </properties>
+        </profile>
+
+        <profile>
+            <id>webdriver-chrome</id>
+            <properties>
+                <arquillian.browser>chrome</arquillian.browser>
+            </properties>
+        </profile>
+
+        <profile>
+            <id>opera</id>
+            <properties>
+                <arquillian.browser>opera</arquillian.browser>
+            </properties>
+        </profile>
     </profiles>
 
     <repositories>
@@ -278,6 +559,18 @@
                 <filtering>true</filtering>
             </resource>
         </resources>
+        <testResources>
+            <testResource>
+                <directory>src/test/resources</directory>
+                <filtering>true</filtering>
+            </testResource>
+            <testResource>
+                <directory>src/test/java/</directory>
+                <includes>
+                    <include>**/*.story</include>
+                </includes>
+            </testResource>
+        </testResources>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -307,6 +600,14 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.16</version>
+                <configuration>
+                    <skipTests>true</skipTests>
+                </configuration>
             </plugin>
         </plugins>
         <finalName>archetype</finalName>
