--- a/pom.xml
+++ b/pom.xml
@@ -453,6 +453,9 @@
                             <includes>
                                 <include>**/*IT.java</include>
                             </includes>
+                            <excludes>
+                                <exclude>**/*BaseIT.java</exclude>
+                            </excludes>
                         </configuration>
                     </plugin>
                 </plugins>
