--- a/pom.xml
+++ b/pom.xml
@@ -15,8 +15,8 @@
         <conventions.version>1.0.0-SNAPSHOT</conventions.version>
         <codi.version>1.0.6</codi.version>
         <version.selenium>2.39.0</version.selenium>
-        <version.drone>1.2.3.Final</version.drone>
-        <version.arquillian>1.1.2.Final</version.arquillian>
+        <version.drone>1.2.4.Final</version.drone>
+        <version.arquillian>1.1.3.Final</version.arquillian>
         <version.graphene>2.0.1.Final</version.graphene>
         <arquillian.jbossHome>/home/rmpestano/jboss-eap-6.1</arquillian.jbossHome>
         <arquillian.browser>firefox</arquillian.browser>
@@ -269,6 +269,9 @@
                 <datasource>
                     java:jboss/datasources/ExampleDS
                 </datasource>
+                <hibernate.platform>
+                    org.hibernate.service.jta.platform.internal.JBossAppServerJtaPlatform
+                </hibernate.platform>
             </properties>
 
             <dependencies>
@@ -343,6 +346,9 @@
                 <datasource>
                     jdbc/__default
                 </datasource>
+                <hibernate.platform>
+                    org.hibernate.service.jta.platform.internal.SunOneJtaPlatform
+                </hibernate.platform>
             </properties>
             <dependencies>
                 <dependency>
@@ -353,15 +359,22 @@
                 <dependency>
                     <groupId>org.hibernate</groupId>
                     <artifactId>hibernate-entitymanager</artifactId>
+                    <version>4.3.4.Final</version>
                 </dependency>
 
                 <dependency>
                     <groupId>org.hibernate</groupId>
                     <artifactId>hibernate-core</artifactId>
+                    <version>4.3.4.Final</version>
                 </dependency>
                 <dependency>
                     <groupId>org.hibernate</groupId>
                     <artifactId>hibernate-validator</artifactId>
+                </dependency>
+                <dependency>
+                    <groupId>org.jboss</groupId>
+                    <artifactId>jandex</artifactId>
+                    <version>1.2.0.Beta1</version>
                 </dependency>
 
                 <!-- end hibernate -->
