--- a/pom.xml
+++ b/pom.xml
@@ -67,7 +67,7 @@
             <scope>runtime</scope>
         </dependency>
         <dependency>
-            <groupId>org.primefaces.extensions</groupId>
+            <groupId>org.primefaces.themes</groupId>
             <artifactId>all-themes</artifactId>
         </dependency>
         <dependency>
@@ -232,7 +232,7 @@
             <dependency>
                 <groupId>org.conventionsframework</groupId>
                 <artifactId>conventions-bom</artifactId>
-                <version>1.0.0-RC1</version>
+                <version>${conventions.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -359,13 +359,11 @@
                 <dependency>
                     <groupId>org.hibernate</groupId>
                     <artifactId>hibernate-entitymanager</artifactId>
-                    <version>4.3.4.Final</version>
                 </dependency>
 
                 <dependency>
                     <groupId>org.hibernate</groupId>
                     <artifactId>hibernate-core</artifactId>
-                    <version>4.3.4.Final</version>
                 </dependency>
                 <dependency>
                     <groupId>org.hibernate</groupId>
