--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,6 @@
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <conventions.version>1.0.0-SNAPSHOT</conventions.version>
-        <codi.version>1.0.6</codi.version>
         <version.selenium>2.39.0</version.selenium>
         <version.drone>1.2.4.Final</version.drone>
         <version.arquillian>1.1.3.Final</version.arquillian>
@@ -42,29 +41,8 @@
             <version>4.0</version>
         </dependency>
         <dependency>
-            <groupId>org.apache.myfaces.extensions.cdi.core</groupId>
-            <artifactId>myfaces-extcdi-core-api</artifactId>
-            <version>${codi.version}</version>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.myfaces.extensions.cdi.core</groupId>
-            <artifactId>myfaces-extcdi-core-impl</artifactId>
-            <version>${codi.version}</version>
-            <scope>runtime</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.myfaces.extensions.cdi.modules</groupId>
-            <artifactId>myfaces-extcdi-jsf20-module-api</artifactId>
-            <version>${codi.version}</version>
-            <scope>compile</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.myfaces.extensions.cdi.modules</groupId>
-            <artifactId>myfaces-extcdi-jsf20-module-impl</artifactId>
-            <version>${codi.version}</version>
-            <scope>runtime</scope>
+            <groupId>org.apache.myfaces.extensions.cdi.bundles</groupId>
+            <artifactId>myfaces-extcdi-bundle-jsf20</artifactId>
         </dependency>
         <dependency>
             <groupId>org.primefaces.themes</groupId>
