--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <version>1.0-SNAPSHOT</version>
@@ -12,7 +12,7 @@
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <conventions.version>1.0.0-SNAPSHOT</conventions.version>
+        <conventions.version>1.0.0-RC2</conventions.version>
         <version.selenium>2.39.0</version.selenium>
         <version.drone>1.2.4.Final</version.drone>
         <version.arquillian>1.1.3.Final</version.arquillian>
@@ -282,47 +282,47 @@
                 <datasource>
                     java:openejb/Resource/default
                 </datasource>
-	    </properties>
-                <dependencies>
-		        <dependency>
-		            <groupId>org.hibernate.javax.persistence</groupId>
-		            <artifactId>hibernate-jpa-2.0-api</artifactId>
-		        </dependency>
+            </properties>
+            <dependencies>
+                <dependency>
+                    <groupId>org.hibernate.javax.persistence</groupId>
+                    <artifactId>hibernate-jpa-2.0-api</artifactId>
+                </dependency>
 
-		        <dependency>
-		            <groupId>org.hibernate</groupId>
-		            <artifactId>hibernate-entitymanager</artifactId>
-		        </dependency>
+                <dependency>
+                    <groupId>org.hibernate</groupId>
+                    <artifactId>hibernate-entitymanager</artifactId>
+                </dependency>
 
-		        <dependency>
-		            <groupId>org.hibernate</groupId>
-		            <artifactId>hibernate-core</artifactId>
-		        </dependency>
-		        <dependency>
-		            <groupId>org.hibernate</groupId>
-		            <artifactId>hibernate-validator</artifactId>
-		        </dependency>
+                <dependency>
+                    <groupId>org.hibernate</groupId>
+                    <artifactId>hibernate-core</artifactId>
+                </dependency>
+                <dependency>
+                    <groupId>org.hibernate</groupId>
+                    <artifactId>hibernate-validator</artifactId>
+                </dependency>
 
-		        <!-- end hibernate -->
+                <!-- end hibernate -->
 
-		        <dependency>
-		            <groupId>org.javassist</groupId>
-		            <artifactId>javassist</artifactId>
-		        </dependency>
+                <dependency>
+                    <groupId>org.javassist</groupId>
+                    <artifactId>javassist</artifactId>
+                </dependency>
 
 
-		        <!-- Logging -->
-		        <dependency>
-		            <groupId>org.slf4j</groupId>
-		            <artifactId>slf4j-log4j12</artifactId>
-		        </dependency>
+                <!-- Logging -->
+                <dependency>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-log4j12</artifactId>
+                </dependency>
 
-		        <dependency>
-		            <groupId>commons-logging</groupId>
-		            <artifactId>commons-logging</artifactId>
-		        </dependency>
+                <dependency>
+                    <groupId>commons-logging</groupId>
+                    <artifactId>commons-logging</artifactId>
+                </dependency>
                 <!-- end Logging -->
-                </dependencies>
+            </dependencies>
         </profile>
         <profile>
             <id>glassfish</id>
