--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <conventions.version>1.0.0-RC2</conventions.version>
+        <conventions.version>1.0.0-SNAPSHOT</conventions.version>
         <version.selenium>2.39.0</version.selenium>
         <version.drone>1.2.4.Final</version.drone>
         <version.arquillian>1.1.3.Final</version.arquillian>
