--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
         <version.drone>1.2.4.Final</version.drone>
         <version.arquillian>1.1.3.Final</version.arquillian>
         <version.graphene>2.0.1.Final</version.graphene>
-        <arquillian.jbossHome>/home/rmpestano/jboss-eap-6.1</arquillian.jbossHome>
+        <arquillian.serverHome>/home/rmpestano/jboss-eap-6.1</arquillian.serverHome>
         <arquillian.browser>firefox</arquillian.browser>
         <arquillian.debug>false</arquillian.debug>
         <arquillian.remote>false</arquillian.remote>
@@ -515,7 +515,7 @@
             <properties>
                 <!--referenced by arquillian.launch and used in arquillian.xml to choice which container arquillian will use-->
                 <arquillian.testContainer>jboss-managed</arquillian.testContainer>
-                <arquillian.jbossHome>/home/rmpestano/servidores/wildfly-8.0.0.Final</arquillian.jbossHome>
+                <arquillian.serverHome>/home/rmpestano/servidores/wildfly-8.0.0.Final</arquillian.serverHome>
             </properties>
             <dependencies>
                 <dependency>
