--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <conventions.version>1.0.0-RC2</conventions.version>
+        <conventions.version>1.0.0-SNAPSHOT</conventions.version>
         <version.selenium>2.40.0</version.selenium>
         <version.drone>1.3.0.Final</version.drone>
         <version.arquillian>1.1.3.Final</version.arquillian>
@@ -531,6 +531,9 @@
             <id>jboss-remote</id>
             <properties>
                 <arquillian.testContainer>jboss-remote</arquillian.testContainer>
+                <datasource>java:jboss/datasources/ExampleDS2</datasource>
+                <hibernate.platform>  org.hibernate.service.jta.platform.internal.JBossAppServerJtaPlatform</hibernate.platform>
+                <hibernate.provider>org.hibernate.ejb.HibernatePersistence</hibernate.provider>
                 <!--referenced by arquillian.launch and used in arquillian.xml to choice which container arquillian will use-->
             </properties>
             <dependencies>
@@ -547,15 +550,9 @@
             <properties>
                 <!--referenced by arquillian.launch and used in arquillian.xml to choice which container arquillian will use-->
                 <arquillian.testContainer>jboss-managed</arquillian.testContainer>
-                <datasource>
-                    java:jboss/datasources/ExampleDS
-                </datasource>
-                <hibernate.platform>
-                    org.hibernate.service.jta.platform.internal.JBossAppServerJtaPlatform
-                </hibernate.platform>
-                <hibernate.provider>
-                    org.hibernate.ejb.HibernatePersistence
-                </hibernate.provider>
+                <datasource>java:jboss/datasources/ExampleDS2</datasource>
+                <hibernate.platform>org.hibernate.service.jta.platform.internal.JBossAppServerJtaPlatform</hibernate.platform>
+                <hibernate.provider>org.hibernate.ejb.HibernatePersistence</hibernate.provider>
             </properties>
             <dependencies>
                 <dependency>
