--- a/src/test/resources/datasets/user.yml
+++ b/src/test/resources/datasets/user.yml
@@ -7,7 +7,7 @@ user_:
     updateDate: 2014-01-01
   - id: 2
     name: "user"
-    password: "user"
+    password: "ee11cbb19052e40b07aac0ca060c23ee"
     version: 1
     createDate: 2014-01-01
     updateDate: 2014-01-01
