--- a/pom.xml
+++ b/pom.xml
@@ -13,10 +13,13 @@
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <conventions.version>1.0.0-SNAPSHOT</conventions.version>
+        <!-- arquillian extensions -->
         <version.selenium>2.40.0</version.selenium>
         <version.drone>1.3.0.Final</version.drone>
-        <version.arquillian>1.1.3.Final</version.arquillian>
+        <version.arquillian>1.1.4.Final</version.arquillian>
         <version.graphene>2.0.2.Final</version.graphene>
+        <version.recorder>1.0.0.Alpha2</version.recorder>
+        <!--arquillian properties -->
         <arquillian.serverHome>/home/rmpestano/jboss-eap-6.1</arquillian.serverHome>
         <arquillian.browser>firefox</arquillian.browser>
         <arquillian.debug>false</arquillian.debug>
@@ -24,11 +27,15 @@
         <arquillian.chromeDriver>c:\chromedriver.exe</arquillian.chromeDriver>
         <arquillian.localAddress>localhost</arquillian.localAddress>
         <arquillian.remoteAddress>http://remote-selenium-hub:1035/wd/hub</arquillian.remoteAddress>
+        <!-- servers -->
+        <jboss.version>7.2.0.Final</jboss.version>
+        <wildfly.version>8.0.0.Final</wildfly.version>
         <build.timestamp>${maven.build.timestamp}</build.timestamp>
-		<sonar.core.codeCoveragePlugin>jacoco</sonar.core.codeCoveragePlugin>
- 	    <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
-        <sonar.jacoco.reportPath>${project.basedir}/target/jacoco.exec</sonar.jacoco.reportPath> 
         <maven.build.timestamp.format>dd/MM/yyyy HH:mm</maven.build.timestamp.format>
+        <!-- sonar -->
+        <!--sonar.core.codeCoveragePlugin>jacoco</sonar.core.codeCoveragePlugin>
+ 	    <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
+        <sonar.jacoco.reportPath>${project.basedir}/target/jacoco.exec</sonar.jacoco.reportPath-->
     </properties>
 
     <dependencies>
@@ -163,6 +170,20 @@
             <version>1.0.2</version>
             <scope>test</scope>
         </dependency>
+
+        <!-- arquillian recorder -->
+        <!--dependency>
+            <groupId>org.arquillian.extension</groupId>
+            <artifactId>arquillian-recorder-api</artifactId>
+            <version>${version.recorder}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.arquillian.extension</groupId>
+            <artifactId>arquillian-desktop-video-recorder</artifactId>
+            <version>${version.recorder}</version>
+        </dependency-->
+
+
         <dependency>
             <groupId>org.jboss.spec.javax.annotation</groupId>
             <artifactId>jboss-annotations-api_1.1_spec</artifactId>
@@ -549,7 +570,8 @@
             <properties>
                 <arquillian.testContainer>jboss-remote</arquillian.testContainer>
                 <datasource>java:jboss/datasources/ExampleDS2</datasource>
-                <hibernate.platform>org.hibernate.service.jta.platform.internal.JBossAppServerJtaPlatform</hibernate.platform>
+                <hibernate.platform>org.hibernate.service.jta.platform.internal.JBossAppServerJtaPlatform
+                </hibernate.platform>
                 <hibernate.provider>org.hibernate.ejb.HibernatePersistence</hibernate.provider>
                 <!--referenced by arquillian.launch and used in arquillian.xml to choice which container arquillian will use-->
             </properties>
@@ -565,10 +587,9 @@
         <profile>
             <id>jboss-managed</id>
             <properties>
-                <!--referenced by arquillian.launch and used in arquillian.xml to choice which container arquillian will use-->
-                <arquillian.testContainer>jboss-managed</arquillian.testContainer>
                 <datasource>java:jboss/datasources/ExampleDS2</datasource>
-                <hibernate.platform>org.hibernate.service.jta.platform.internal.JBossAppServerJtaPlatform</hibernate.platform>
+                <hibernate.platform>org.hibernate.service.jta.platform.internal.JBossAppServerJtaPlatform
+                </hibernate.platform>
                 <hibernate.provider>org.hibernate.ejb.HibernatePersistence</hibernate.provider>
             </properties>
             <dependencies>
@@ -576,28 +597,111 @@
                     <groupId>org.jboss.as</groupId>
                     <artifactId>jboss-as-arquillian-container-managed</artifactId>
                     <scope>test</scope>
-                    <version>7.2.0.Final</version>
+                    <version>${jboss.version}</version>
                 </dependency>
             </dependencies>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>2.16</version>
+                        <configuration>
+                            <systemPropertyVariables>
+                                <arquillian.launch>jboss-managed</arquillian.launch>
+                            </systemPropertyVariables>
+                            <environmentVariables>
+                                <JBOSS_HOME>${arquillian.serverHome}</JBOSS_HOME>
+                            </environmentVariables>
+                        </configuration>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-dependency-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>unpack</id>
+                                <phase>process-test-classes</phase>
+                                <goals>
+                                    <goal>unpack</goal>
+                                </goals>
+                                <configuration>
+                                    <artifactItems>
+                                        <artifactItem>
+                                            <groupId>org.jboss.as</groupId>
+                                            <artifactId>jboss-as-dist</artifactId>
+                                            <version>${jboss.version}</version>
+                                            <type>zip</type>
+                                            <overWrite>false</overWrite>
+                                            <outputDirectory>${project.build.directory}</outputDirectory>
+                                        </artifactItem>
+                                    </artifactItems>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
         </profile>
         <profile>
             <id>wildfly-managed</id>
             <properties>
-                <!--referenced by arquillian.launch and used in arquillian.xml to choice which container arquillian will use-->
-                <arquillian.testContainer>jboss-managed</arquillian.testContainer>
-                <arquillian.serverHome>/home/rmpestano/servidores/wildfly-8.0.0.Final</arquillian.serverHome>
+                <arquillian.serverHome>${project.build.directory}/wildfly-${wildfly.version}</arquillian.serverHome>
                 <datasource>java:jboss/datasources/ExampleDS2</datasource>
-                <hibernate.platform>org.hibernate.service.jta.platform.internal.JBossAppServerJtaPlatform</hibernate.platform>
+                <hibernate.platform>org.hibernate.service.jta.platform.internal.JBossAppServerJtaPlatform
+                </hibernate.platform>
                 <hibernate.provider>org.hibernate.jpa.HibernatePersistenceProvider</hibernate.provider>
             </properties>
             <dependencies>
                 <dependency>
                     <groupId>org.wildfly</groupId>
                     <artifactId>wildfly-arquillian-container-managed</artifactId>
-                    <version>8.0.0.Final</version>
+                    <version>${wildfly.version}</version>
                     <scope>test</scope>
                 </dependency>
             </dependencies>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-dependency-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>unpack</id>
+                                <phase>process-test-classes</phase>
+                                <goals>
+                                    <goal>unpack</goal>
+                                </goals>
+                                <configuration>
+                                    <artifactItems>
+                                        <artifactItem>
+                                            <groupId>org.wildfly</groupId>
+                                            <artifactId>wildfly-dist</artifactId>
+                                            <version>${wildfly.version}</version>
+                                            <type>zip</type>
+                                            <overWrite>false</overWrite>
+                                            <outputDirectory>${project.build.directory}</outputDirectory>
+                                        </artifactItem>
+                                    </artifactItems>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>2.16</version>
+                        <configuration>
+                            <systemPropertyVariables>
+                                <arquillian.launch>jboss-managed</arquillian.launch>
+                            </systemPropertyVariables>
+                            <environmentVariables>
+                                <JBOSS_HOME>${arquillian.serverHome}</JBOSS_HOME>
+                            </environmentVariables>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
         </profile>
         <profile>
             <id>glassfish-managed</id>
@@ -645,8 +749,24 @@
                     <artifactId>jandex</artifactId>
                     <version>1.2.0.Beta1</version>
                 </dependency>
-
             </dependencies>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>2.16</version>
+                        <configuration>
+                            <systemPropertyVariables>
+                                <arquillian.launch>jboss-managed</arquillian.launch>
+                            </systemPropertyVariables>
+                            <environmentVariables>
+                                <JBOSS_HOME>${arquillian.serverHome}</JBOSS_HOME>
+                            </environmentVariables>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
         </profile>
 
         <!-- tests coverage-->
@@ -659,14 +779,14 @@
                 <dependency>
                     <groupId>org.jboss.arquillian.extension</groupId>
                     <artifactId>arquillian-jacoco</artifactId>
-		            <version>1.0.0.Alpha6</version>
+                    <version>1.0.0.Alpha6</version>
                     <scope>test</scope>
                 </dependency>
                 <dependency>
                     <groupId>org.jacoco</groupId>
                     <artifactId>org.jacoco.core</artifactId>
                     <version>${jacoco.version}</version>
- 	            <scope>test</scope>
+                    <scope>test</scope>
                 </dependency>
             </dependencies>
             <build>
@@ -728,10 +848,15 @@
     </profiles>
 
     <repositories>
-	    <repository>
+        <repository>
             <id>arquillian jbehave UNofficial maven repo</id>
             <url>http://arquillian-jbehave-repo.googlecode.com/git/</url>
-			<layout>default</layout>		
+            <layout>default</layout>
+        </repository>
+        <repository>
+            <id>Jboss AS dist UNofficial maven repo</id>
+            <url>http://jboss-as-dist.googlecode.com/git/</url>
+            <layout>default</layout>
         </repository>
         <repository>
             <id>prime-repo</id>
@@ -746,9 +871,9 @@
                 <enabled>true</enabled>
             </snapshots>
         </repository>
-       
+
     </repositories>
- 
+
     <build>
         <resources>
             <resource>
